# THEMIS

./: .env-example  README.md  index.html  pyproject.toml
assets/: README.md
assets/dataset/: duplication.json  duplication_retract.json  forgery.json  forgery_retract.json  text_image_inconsistency.json
scripts/benchmark/: README.md  main.py
scripts/benchmark/CoT/: CoT_config.py
scripts/benchmark/CoT/model_generator/: openrouter.py
scripts/benchmark/CoT/prompt/system/: composite_manipulation_operations_system_prompt.txt  cross_modal_inconsistency_system_prompt.txt  single_mode_forgery_system_prompt.txt
scripts/benchmark/CoT/prompt/user/: cross_modal_inconsistency_user_prompt.txt  single_mode_forgery_user_prompt.txt
scripts/benchmark/CoT/task_kwargs/: __init__.py  composite_manipulation_operations.py
scripts/benchmark/basic/: basic_config.py
scripts/benchmark/basic/prompt/: __init__.py
scripts/benchmark/basic/prompt/system/: composite_manipulation_operations_system_prompt.txt  cross_modal_inconsistency_system_prompt.txt  single_mode_forgery_system_prompt.txt
scripts/benchmark/basic/prompt/user/: composite_manipulation_operations_user_prompt.txt
scripts/benchmark/basic/task_kwargs/: cross_modal_inconsistency.py  utils.py
scripts/benchmark/few_shot/: few_shot_config.py
scripts/benchmark/few_shot/model_generator/: __init__.py
scripts/benchmark/few_shot/prompt/: __init__.py
scripts/benchmark/few_shot/task_kwargs/: __init__.py  single_mode_forgery.py
static/css/: style.css
(+1 files in other folders)
